fix scss and html

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
             <img
               src="./public/img/Pinterest_Logo.svg"
               alt="Pinterest"
-              class="header__logo_item"
+              class="header__logo-item"
             />
           </picture>
         </div>
@@ -31,11 +31,11 @@
           <input
             type="text"
             placeholder="поиск..."
-            class="header__search_item"
+            class="header__search-item"
           />
         </div>
         <div class="header__dropdown">
-          <button class="header__dropdown_item">
+          <button class="header__dropdown-item">
             <span>Выбрать доску</span>
             &#9660
           </button>
