--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
             type="text"
             placeholder="поиск..."
             class="header__search-item"
+            id="search"
           />
         </div>
         <div class="header__dropdown">
@@ -42,211 +43,8 @@
         </div>
       </section>
       <section class="grid">
-        <div class="grid__item">
-          <div class="card">
-            <img
-              src="./public/img/example.jpg"
-              alt="sample"
-              class="card__pic"
-            />
-            <div class="card__description">
-              <img
-                src="./public/img/user-avatar.png"
-                alt="avatar"
-                class="card__avatar"
-              />
-              <p class="card__text">Lorem ipsum!</p>
-            </div>
-          </div>
-        </div>
-        <div class="grid__item">
-          <div class="card">
-            <img
-              src="./public/img/example.jpg"
-              alt="sample"
-              class="card__pic"
-            />
-            <div class="card__description">
-              <img
-                src="./public/img/user-avatar.png"
-                alt="avatar"
-                class="card__avatar"
-              />
-              <p class="card__text">Lorem ipsum!</p>
-            </div>
-          </div>
-        </div>
-        <div class="grid__item">
-          <div class="card">
-            <img
-              src="./public/img/example.jpg"
-              alt="sample"
-              class="card__pic"
-            />
-            <div class="card__description">
-              <img
-                src="./public/img/user-avatar.png"
-                alt="avatar"
-                class="card__avatar"
-              />
-              <p class="card__text">Lorem ipsum!</p>
-            </div>
-          </div>
-        </div>
-        <div class="grid__item">
-          <div class="card">
-            <img
-              src="./public/img/example.jpg"
-              alt="sample"
-              class="card__pic"
-            />
-            <div class="card__description">
-              <img
-                src="./public/img/user-avatar.png"
-                alt="avatar"
-                class="card__avatar"
-              />
-              <p class="card__text">Lorem ipsum!</p>
-            </div>
-          </div>
-        </div>
-        <div class="grid__item">
-          <div class="card">
-            <img
-              src="./public/img/example.jpg"
-              alt="sample"
-              class="card__pic"
-            />
-            <div class="card__description">
-              <img
-                src="./public/img/user-avatar.png"
-                alt="avatar"
-                class="card__avatar"
-              />
-              <p class="card__text">Lorem ipsum!</p>
-            </div>
-          </div>
-        </div>
-        <div class="grid__item">
-          <div class="card">
-            <img
-              src="./public/img/example.jpg"
-              alt="sample"
-              class="card__pic"
-            />
-            <div class="card__description">
-              <img
-                src="./public/img/user-avatar.png"
-                alt="avatar"
-                class="card__avatar"
-              />
-              <p class="card__text">Lorem ipsum!</p>
-            </div>
-          </div>
-        </div>
-        <div class="grid__item">
-          <div class="card">
-            <img
-              src="./public/img/example.jpg"
-              alt="sample"
-              class="card__pic"
-            />
-            <div class="card__description">
-              <img
-                src="./public/img/user-avatar.png"
-                alt="avatar"
-                class="card__avatar"
-              />
-              <p class="card__text">Lorem ipsum!</p>
-            </div>
-          </div>
-        </div>
-        <div class="grid__item">
-          <div class="card">
-            <img
-              src="./public/img/example.jpg"
-              alt="sample"
-              class="card__pic"
-            />
-            <div class="card__description">
-              <img
-                src="./public/img/user-avatar.png"
-                alt="avatar"
-                class="card__avatar"
-              />
-              <p class="card__text">Lorem ipsum!</p>
-            </div>
-          </div>
-        </div>
-        <div class="grid__item">
-          <div class="card">
-            <img
-              src="./public/img/example.jpg"
-              alt="sample"
-              class="card__pic"
-            />
-            <div class="card__description">
-              <img
-                src="./public/img/user-avatar.png"
-                alt="avatar"
-                class="card__avatar"
-              />
-              <p class="card__text">Lorem ipsum!</p>
-            </div>
-          </div>
-        </div>
-        <div class="grid__item">
-          <div class="card">
-            <img
-              src="./public/img/example.jpg"
-              alt="sample"
-              class="card__pic"
-            />
-            <div class="card__description">
-              <img
-                src="./public/img/user-avatar.png"
-                alt="avatar"
-                class="card__avatar"
-              />
-              <p class="card__text">Lorem ipsum!</p>
-            </div>
-          </div>
-        </div>
-        <div class="grid__item">
-          <div class="card">
-            <img
-              src="./public/img/example.jpg"
-              alt="sample"
-              class="card__pic"
-            />
-            <div class="card__description">
-              <img
-                src="./public/img/user-avatar.png"
-                alt="avatar"
-                class="card__avatar"
-              />
-              <p class="card__text">Lorem ipsum!</p>
-            </div>
-          </div>
-        </div>
-        <div class="grid__item">
-          <div class="card">
-            <img
-              src="./public/img/example.jpg"
-              alt="sample"
-              class="card__pic"
-            />
-            <div class="card__description">
-              <img
-                src="./public/img/user-avatar.png"
-                alt="avatar"
-                class="card__avatar"
-              />
-              <p class="card__text">Lorem ipsum!</p>
-            </div>
-          </div>
-        </div>
       </section>
     </div>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
