--- a/src/index.html
+++ b/src/index.html
@@ -247,6 +247,38 @@
           </div>
         </div>
       </section>
+      <section class="modal__windows">
+         <div class="board__selection-list">
+          <div class="wrapper">
+            <div class="boards">Выберите доску:</div>
+            <div class="boards">Доска 1</div>
+            <div class="boards">Доска 2</div>
+            <div class="boards">Доска 3</div>
+            <div class="boards">Доска 4</div>
+          </div>
+         </div>
+        <div class="board__active">
+           <div class="add">Добавить на доску</div>
+           <div class="report">Пожаловаться</div>
+        </div>
+        <div class="board__report">
+          <label><input type="checkbox"class="click">Насилие<br></label>
+          <label><input type="checkbox"class="click">Расовая дискриминация<br></label>
+          <label><input type="checkbox"class="click">Контент для взрослых<br></label>
+          <label><input type="checkbox"class="click">Жестокое обращение с животными<br></label>
+          <label><input type="checkbox"class="click">Дезинформация<br></label>
+          <label><input type="checkbox"class="click">Мошенничество<br></label>
+          <label><input type="checkbox"class="click">Контрафакция<br></label>
+          <button type="button" class="cancel button">cancel</button>
+          <button type="button" class="send button">send</button>  
+        </div>
+        <div class="board__add">
+           <div>Добавить на доску:</div>
+           <div>Доска 1</div>
+           <div>Доска 2</div>
+           <div>Доска 3</div>
+         </div> 
+      </section>
     </div>
   </body>
 </html>
