Addin last modal

--- a/src/index.html
+++ b/src/index.html
@@ -105,6 +105,12 @@
         <button type="button" class="report-modal__button">cancel</button>
         <button type="button" class="report-modal__button">send</button>  
       </div>
+      <div class="add-to-desk-modal" hidden>
+        <div>Добавить на доску</div>
+        <div class="modal-click-item">Доска 1</div>
+        <div class="modal-click-item">Доска 2</div>
+        <div class="modal-click-item">Доска 3</div>
+      </div>
    </div>
     <script type="module" src="./js/index.js"></script>
   </body>
