--- a/src/index.html
+++ b/src/index.html
@@ -50,44 +50,26 @@
       </section>
       <section class="grid">
       </section>
-      <div class="card-modal" hidden>
-        <img 
-          src="./public/img/example.jpg" 
-          alt="avatar"
-          class="card-modal__pic"
-        />
-        <div class="card-modal__info">
-          <div class="card-modal__desc">
-            <p> 
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </p>
-          </div>
-          <div class="card-modal__author">
-            <img 
-              src="./public/img/user-avatar.png" 
-              alt="avatar"
-              class="card-modal__avatar"
-            />
-            <div class="card-modal__name">Lorem ipsum dolor sit.</div>
-          </div>
+      <div class="report-modal-wrapper" hidden>
+        <div class="report-modal">
+          <input type="checkbox" class="report-modal__checkbox">  Насилие<br>
+          <input type="checkbox" class="report-modal__checkbox">  Расовая дискриминация<br>
+          <input type="checkbox" class="report-modal__checkbox">  Контент для взрослых<br>
+          <input type="checkbox" class="report-modal__checkbox">  Жестокое обращение с животными<br>
+          <input type="checkbox" class="report-modal__checkbox">  Дезинформация<br>
+          <input type="checkbox" class="report-modal__checkbox">  Мошенничество<br>
+          <input type="checkbox" class="report-modal__checkbox">  Контрафакция<br>
+          <button type="button" class="report-modal__button">cancel</button>
+          <button type="button" class="report-modal__button">send</button>  
         </div>
       </div>
-      <div class="report-modal" hidden>
-        <input type="checkbox" class="report-modal__checkbox">  Насилие<br>
-        <input type="checkbox" class="report-modal__checkbox">  Расовая дискриминация<br>
-        <input type="checkbox" class="report-modal__checkbox">  Контент для взрослых<br>
-        <input type="checkbox" class="report-modal__checkbox">  Жестокое обращение с животными<br>
-        <input type="checkbox" class="report-modal__checkbox">  Дезинформация<br>
-        <input type="checkbox" class="report-modal__checkbox">  Мошенничество<br>
-        <input type="checkbox" class="report-modal__checkbox">  Контрафакция<br>
-        <button type="button" class="report-modal__button">cancel</button>
-        <button type="button" class="report-modal__button">send</button>  
-      </div>
-      <div class="add-to-desk-modal" hidden>
-        <div>Добавить на доску</div>
-        <div class="modal-click-item">Доска 1</div>
-        <div class="modal-click-item">Доска 2</div>
-        <div class="modal-click-item">Доска 3</div>
+      <div class="add-to-desk-modal-wrapper" hidden>
+        <div class="add-to-desk-modal">
+          <div>Добавить на доску</div>
+          <div class="modal-click-item">Доска 1</div>
+          <div class="modal-click-item">Доска 2</div>
+          <div class="modal-click-item">Доска 3</div>
+        </div>
       </div>
    </div>
     <script type="module" src="./js/index.js"></script>
