--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <section class="header">
+      <header class="header">
         <div class="header__logo">
           <picture>
             <source
@@ -47,7 +47,8 @@
             <div class="modal-click-item">Доска 3</div>
          </div>
         </div>
-      </section>
+      </header>
+      <h1 class="desk-number"></h1>
       <section class="grid">
       </section>
       <div class="report-modal-wrapper" hidden>
@@ -70,6 +71,10 @@
           <div class="modal-click-item">Доска 2</div>
           <div class="modal-click-item">Доска 3</div>
         </div>
+      </div>
+      <div class="pagination">
+        <button class="pagination__button">показать еще</button>
+        <p class="pagination__message">ничего не найдено</p>
       </div>
    </div>
     <script type="module" src="./js/index.js"></script>
