--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
   </head>
   <body>
     <div class="wrapper">
+      <div class="preloader-wrapper">
+        <span class="preloader"></span>
+      </div>
       <header class="header">
         <div class="header__logo">
           <picture>
