--- a/src/index.html
+++ b/src/index.html
@@ -60,8 +60,8 @@
           <input type="checkbox" class="report-modal__checkbox">  Дезинформация<br>
           <input type="checkbox" class="report-modal__checkbox">  Мошенничество<br>
           <input type="checkbox" class="report-modal__checkbox">  Контрафакция<br>
-          <button type="button" class="report-modal__button">cancel</button>
-          <button type="button" class="report-modal__button">send</button>  
+          <button type="button" class="report-modal__button">назад</button>
+          <button type="button" class="report-modal__button">оптравить</button>  
         </div>
       </div>
       <div class="add-to-desk-modal-wrapper" hidden>
